--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "python.pythonPath": "/usr/bin/python3"
+  "python.pythonPath": "/usr/bin/python3",
+  "go.autocompleteUnimportedPackages": true,
+  "go.docsTool": "gogetdoc",
+  "go.formatTool": "goimports"
 }
